# clauded

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  claude-vm.yaml  hatch_build.py  pyproject.toml  user-stories.md
.githooks/: pre-commit
.github/workflows/: test.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
ansible/: ansible.cfg  inventory.ini  site.yml
docs/: alpine-architecture.md  architecture.md  claude-code-alpine-troubleshooting.md  claude-code-router.md  configuration.md  migration-from-alpine.md  supply-chain-security.md  testing-infrastructure.md
docs/adr/: 0001-wizard-ui-library.md  0002-ccr-extrathinktag-drops-reasoning.md
scripts/: update_linguist_data.py
specs/: atomic-config-update-spec.md  feature-project-detection.md  mongodb-spec.md  spec.md
specs/archive/: remove-installer-hash-checks-spec.md
specs/audit-fixes/: 001-fix-reprovision-workflow.md  002-subprocess-error-handling.md  003-fix-heredoc-injection.md  004-fix-provisioner-role-selection.md  005-config-validation.md  006-upgrade-vm-name-hashing.md  007-thread-safe-linguist-cache.md  008-wizard-timeout-handling.md  009-bounded-file-scanning.md  010-specific-exception-handling.md  011-env-var-sanitization.md  012-add-version-flag.md  013-configurable-alpine-image.md  014-provisioning-failure-recovery.md  015-deduplicate-shared-config.md  016-remove-stale-todos.md  017-tighten-dependency-constraints.md  018-graceful-interrupt-cleanup.md  019-ci-cd-pipeline.md  020-expand-test-coverage.md  021-create-changelog.md  022-update-spec-documentation.md  023-supply-chain-integrity.md  024-respect-runtime-versions.md  025-secure-claude-permissions-default.md  026-ssh-host-key-checking.md  027-add-license.md
specs/epic-add-codex-framework/: acceptance-criteria.md  epic-state.json  exploration.json  integration-result.json  mocks-registry.json  spec.md  stories.json
specs/epic-add-codex-framework/01-core-codex-integration/: baseline.json  result.json  verification.json
specs/epic-add-codex-framework/02-documentation-changelog/: baseline.json  result.json  verification.json
specs/epic-add-opencode-harness/: acceptance-criteria.md  architecture.md  epic-state.json  exploration-architecture.md  exploration-similar-features.md  exploration-testing.md  exploration.json  mocks-registry.json  spec.md  stories.json
specs/epic-add-opencode-harness/01-opencode-role-and-framework/: architecture.json  baseline.json  result.json  verification.json
specs/epic-add-opencode-harness/02-harness-config-field/: architecture.json  baseline.json  result.json  verification.json
specs/epic-add-opencode-harness/03-wizard-harness-step/: architecture.json  baseline.json  result.json  verification.json
specs/epic-add-opencode-harness/04-harness-aware-launch/: architecture.json  baseline.json  result.json  verification.json
specs/epic-add-opencode-harness/05-mounts-and-update-check/: architecture.json  baseline.json  result.json  verification.json
specs/epic-add-opencode-harness/06-documentation/: architecture.json  baseline.json  result.json  verification.json
specs/epic-configurable-router-hosts/: spec.md
specs/epic-dart-with-flutter/: acceptance-criteria.md  epic-state.json  exploration.json  mocks-registry.json  spec.md  stories.json
specs/epic-dart-with-flutter/01-flutter-installation/: baseline.json  result.json  verification.json
specs/epic-multi-distribution-support/: acceptance-criteria.md  epic-state.json  integration-result.json  mocks-registry.json  spec.md  stories.json
specs/epic-multi-distribution-support/01-distro-infrastructure/: baseline.json  result.json  verification.json
specs/epic-remove-alpine-support/: acceptance-criteria.md  architecture.md  epic-state.json  exploration.json  mocks-registry.json  spec.md  stories.json
specs/epic-remove-alpine-support/01-block-alpine-configs/: result.json  (+3 more)
specs/epic-router-config-prelaunch-refresh/: spec.md
specs/epic-vm-stop-confirmation/: acceptance-criteria.md  epic-state.json  integration-result.json  mocks-registry.json  spec.md  stories.json
specs/implemented/: detection-enhancements-spec.md  sqlite-database-option-spec.md
src/clauded/: __init__.py  cli.py  config.py  constants.py  distro.py  downloads.py  downloads.yml  lima.py  provisioner.py  spinner.py  wizard.py
tests/: __init__.py  test_atomic_config_update.py  test_ccr_extrathinktag_transformer.py  test_claude_code_router_patch.py  test_cli.py  test_cli_distro.py  test_config.py  test_config_distro.py  test_constants.py  test_database.py  test_detect_integration.py  test_detect_linguist.py  test_detection_enhancements_integration.py  test_detection_properties.py  test_detection_security.py  test_distro.py  test_distro_change.py  test_documentation.py  test_downloads.py  test_downloads_distro.py  test_framework.py  test_ktor_build_gradle.py  test_lima.py  test_linguist.py  test_mcp.py  test_mongodb_integration.py  test_provisioner.py  test_spinner.py  test_sqlite_e2e.py  test_sqlite_edit_workflow.py  test_version_check.py  test_version_detection.py  test_wizard.py  test_wizard_distro.py
tests/fixtures/: ccr_anthropic_transformer_1_0_73.js
(+126 files in other folders)
