[project]
name = "clauded"
version = "0.1.0"
description = "Isolated, per-project Lima VMs with automatic environment provisioning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "simple-term-menu>=1.6",
    "pyyaml>=6.0.2",
    "ansible>=11.0,<12.0",  # Pin to ansible-core 2.18.x (2.19+ has module_legacy_m2c bug)
]

[project.scripts]
clauded = "clauded.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-pyyaml>=6.0.12",
    "pre-commit>=4.1",
    "hypothesis>=6.120",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/clauded"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/clauded/**/*.py",
    "src/clauded/roles/**/*.yml",
    "src/clauded/linguist/**/*.yml",
    "src/clauded/linguist/README.md",
]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

# Mypy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["questionary.*", "ansible.*"]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

# Coverage configuration
[tool.coverage.report]
fail_under = 80

[dependency-groups]
dev = [
    "hypothesis>=6.151.2",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "types-pyyaml>=6.0.12.20250915",
]
